hello-jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: scottnelson
  annotations:
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
    certmanager.k8s.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.class: private-nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hello-jenkins
          servicePort: http
    host: jenkins.scottnelson.dev.k8s.pelotime.com
  tls:
  - hosts:
    - jenkins.scottnelson.dev.k8s.pelotime.com
    secretName: jenkins-scottnelson-dev-k8s-tls
